src/SvgUploadPreview.css
.svgPreviewBackground {
	background-image: linear-gradient(45deg, rgba(23, 23, 23, 0.05) 25%, transparent 25%), linear-gradient(-45deg, rgba(23, 23, 23, 0.05) 25%, transparent 25%), linear-gradient(45deg, transparent 75%, rgba(23, 23, 23, 0.05) 75%), linear-gradient(-45deg, transparent 75%, rgba(23, 23, 23, 0.05) 75%);
	background-size: 20px 20px;
	background-position: 0 0, 0 10px, 10px -10px, -10px 0;
	display: flex;
	justify-content: center;
	align-items: center;
	min-height: 250px;
	border: 1px solid rgba(23, 23, 23, 0.1);
	border-radius: 6px;
	position: relative;
	cursor: pointer;
}

.svgPreviewBackground:after {
	content:"Upload SVG";
	color: rgb(48, 48, 48);
	border: 1px solid rgba(48, 48, 48, 0.35);
	background-color: #fff;
	display: inline-flex;
	justify-content: stretch;
	align-items: center;
	margin: 0;
	position: relative;
	font-size: 1em;
	user-select: none;
	transition: border-color 0.15s, background-color 0.15s, color 0.15s, opacity 0.15s, box-shadow 0.1s;
	padding: 0 1rem;
	height: 38px;
	border-radius: 0.375rem;
	line-height: 0;
	cursor: pointer;
}

.svgWrapper svg {
	max-height: 200px;
	max-width: 300px;
}

.svgPreviewBackground.hasValue:after {
	content: none;
	display: none;
	visibility: 0;
}

.svgPreviewBackground:hover:after {
	border-color: rgba(48, 48, 48, 0.7);
	background-color: rgb(244, 244, 244);
}

.updateSvg {
	background-color: #fff;
	position: absolute;
	border: 1px solid #000;
	border-radius: 0.25rem;
	height: 2.5rem;
	padding: 0 1rem;
	margin: 0;
	cursor: pointer;
	top: 1rem;
	right: 1rem;
}

.svgPreviewBackground:hover .updateSvg {
	border-color: rgba(48, 48, 48, 0.7);
	background-color: rgb(244, 244, 244);
}

.svgPreviewBackground input[type=file] {
	opacity: 0;
	visibility: hidden;
	width: 0;
	height: 0;
}

